@@ -249,6 +249,10 @@
       
       \item \command{R CMD check} failed to check the filenames under
       \file{man} for Windows' reserved names.
+
+      \item The \code{"Date"} and \code{"POSIXt"} methods for
+      \code{seq()} could overshoot when \code{to} was supplied and
+      \code{by} was specified in months or years.
     }
   }
 }
